Complete Implementation of API Version 8.0.0.1 (vSphere 8.0.0)
a lot of breaking changes in this release
convert a lot of classes from classic arrays to the Collections Framework
changed core classes like PropertyCollector

Change-Id: Ic0a3c030b0161ec93035b5d45cf4f9a749be5462